--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: gfsr
 Type: Package
 Title: Analysis of GFS weather forecasts
 Version: 0.1.0
-Date: 2013-10-22
+Date: 2013-12-01
 Author: Eric Hare
 Maintainer: Eric Hare <erichare@iastate.edu>
 Description: Functions for obtaining and evaluating the forecasts produced
@@ -10,9 +10,11 @@ Description: Functions for obtaining and evaluating the forecasts produced
 License: GPL-3
 Depends:
     RCurl,
-    lubridate
+    lubridate,
+    XML
 Suggests:
     ggplot2
 Collate:
     'gfs.r'
     'gfsplot.r'
+    'wunderhist.r'
